# reynard

./: .env.example  .gitignore  AUTHORS  CITATION.cff  Dockerfile  Dockerfile.dind  Makefile  README.md  codemeta.json  docker-compose.yml  pom.xml
.github/workflows/: publish-docker-on-release.yml  publish-mvn-on-release.yml  publish-on-merge.yml  publish-on-release.yml  test-on-pr.yml
instrumentation/: README.md  go.mod  go.sum
instrumentation/controller/: Dockerfile  README.md  main.go
instrumentation/proxy/: Dockerfile  README.md  main.go
lib/: README.md  pom.xml
services/: go.mod
services/collector/: requirements.txt
services/controller/: Dockerfile  main.go  main.py  requirements.txt
services/controller-python/: Dockerfile
services/orchestrator/: Dockerfile  main.py  orchestrator.py  requirements.txt
services/otel-collector/: collector-config.yaml
services/proxy/: Dockerfile  go.mod  go.sum  main.go  proxy.go
util/converter/: README.md  converter.py  pyproject.toml
util/docker_compose_converter/: converter.py  pyproject.toml  update_all.sh
util/experiments/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  run_all_filibuster.sh  run_all_filibuster_n.sh  run_all_meta.sh  run_all_micro.sh  run_all_otel.sh  run_filibuster.sh  run_full_filibuster.sh  run_full_meta.sh  run_full_micro.sh  (+1 more)
util/viz/: README.md  average_graphs.py  call_graph.py  compare_tree.py  graphs.py  pyproject.toml  readme.md  tree_viz.py  util.py  viz_all.py
util/viz/reynard_viz/: call_graph.py  config.py  graphs.py  points.py  tree_viz.py
(+612 files in other folders)
