[tool.poetry]
name = "viz"
version = "0.0.1"
description = ""
authors = ["Delano Flipse <delanoflipse@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ete3 = "^3.1.3"
six = "^1.17.0"
numpy = "^2.2.5"
lxml = "^5.4.0"
graphviz = "^0.20.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
