[tool.poetry]
name = "viz"
version = "0.0.1"
description = ""
authors = ["Delano Flipse <delanoflipse@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
graphviz = "^0.20.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
